--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,8 +13,8 @@
                 <span class="text-xl font-bold text-gray-800">Expense Tracker</span>
             </div>
             <div class="flex items-center space-x-2">
-                <a href="#" class="bg-primary text-black px-4 py-2 rounded-md cursor-pointer">Log In</a>
-                <a href="#" class="bg-primary text-black px-4 py-2 rounded-md cursor-pointer">Sign Up</a>
+                <a href="/login" class="bg-primary text-black px-4 py-2 rounded-md cursor-pointer">Log In</a>
+                <a href="/signup" class="bg-primary text-black px-4 py-2 rounded-md cursor-pointer">Sign Up</a>
             </div>
         </nav>
     </header>
@@ -24,7 +24,7 @@
                 </h1>
                 <p class="text-base sm:text-lg md:text-xl mb-8 text-black leading-relaxed"> Track, manage, and optimize your spending with ease.
                 </p>
-                <a href="#" class="bg-primary text-black px-6 py-3 rounded-md text-base sm:text-lg font-semibold cursor-pointer"> Start Tracking Free
+                <a href="/signup" class="bg-primary text-black px-6 py-3 rounded-md text-base sm:text-lg font-semibold cursor-pointer"> Start Tracking Free
                 </a>
             </div>
         </section>
