--- a/app/templates/app.html
+++ b/app/templates/app.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expense Tracker</title>
     <link rel="stylesheet" href="{{url_for('static', filename='css/output.css')}}">
-    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body class="bg-white text-black p-4 font-serif">
@@ -61,7 +60,7 @@
                         <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Actions</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody id="data-entry">
 <!--                    <&#45;&#45; Insert data here&ndash;&gt;-->
                 </tbody>
             </table>
